--- a/exercises9.1_9.7/package.json
+++ b/exercises9.1_9.7/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "calculateBmi" : "ts-node bmiCalculator.ts",
-    "calculateExercises" : "ts-node exerciseCalculator.ts"
+    "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^16.9.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
